--- a/inst/examples/raw.Rmd
+++ b/inst/examples/raw.Rmd
@@ -145,4 +145,25 @@ remiotic(
 
 ## Discussion of API Options
 
-I'll get to this soon...
+One way we might handle the API would be to start with a `frame` and then add shapes.  Here is how that might look with `XYFrame` and `points`.
+
+```{r}
+library(remiotic)
+library(magrittr)
+
+XYFrame(
+  data = iris,
+  xAccessor = "Petal.Length",
+  xExtent = c(0, max(iris$Petal.Length)),
+  yAccessor = "Petal.Width",
+  yExtent = c(0, max(iris$Petal.Width)),
+  title = "Semiotic Using Frames API",
+  margin = list(top = 60, right = 20, bottom = 40, left = 50),
+  height = 400,
+  width = "100%"
+) %>%
+  rem_points() %>%
+  rem_axes(orient = "bottom") %>%
+  rem_axes(orient = "left")
+
+```
